Fixed spacing on mobile

--- a/src/websitePages/HomePage.css
+++ b/src/websitePages/HomePage.css
@@ -102,7 +102,7 @@
 }
 
 .Media-box {
-  padding-top: 5%;
+  padding-top: 4%;
   margin-left: auto;
   margin-right: auto;
   animation: fadeinbio 4.5s;
